Be more specific
Levitation import of page 2465 rev 8577 (minor).

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -16,6 +16,7 @@
 ** ''Fix prefix for non-ascii characters like Å‚''
 * Attributes
 ** '''Allow general xmmsv_ts as attributes'''
+*** Several values for field, value (except for MATCH), source. To be interpreted as a union.
 ** Move idlist to the attributes.
 * IdlistVirtual
 ** Implement an index
