Levitation import of page 2486 rev 8578.

--- a/0-/XMMS2 Vision.mediawiki
+++ b/0-/XMMS2 Vision.mediawiki
@@ -74,3 +74,9 @@ If I tried to condense things even more, that would give a few key points like:
 I think, going off of what theefer said, that Freedom is one of our most important values. XMMS2 is free, as software should be, and provides a freedom of choice to build the most perfect interface humanely possibe.
 
 [[User:Alesbl|Alesbl]] 23:07, 12 February 2009 (UTC)
+
+Yes! Freedom is the keyword here.
+
+Also I think we should go s/music/audio/.
+
+[[User:Anders Gustafsson|Anders Gustafsson]] 06:07, 13 February 2009 (UTC)
