--- a/0-/XMMS2 Vision.mediawiki
+++ b/0-/XMMS2 Vision.mediawiki
@@ -4,6 +4,21 @@
 
 This document should outline the collective vision of the XMMS2 community. Currently this is a draft that has not been passed through the collective feedback from the community. Please contribute directly to this page or to the Discussion page so that this document can mirror our collective vision for this music player and community.
 
+=== Version 3 - The Four Freedoms alternative ===
+One alternative that came forward in the last iteration was to just specify the four freedoms of XMMS2. This is a pretty clean version that is described below.
+
+* '''The freedom to get the application and source'''
+The source and the application will always be available for free, to both use and change.
+
+* '''The freedom to organize and play your audio as you like'''
+XMMS2 should be flexible enough to handle many different ways to organize and play audio. XMMS2 should not lock you in to '''our''' way of thinking.
+
+* '''The freedom to extend XMMS2 your way'''
+The client library and clients should be available for all different toolkits and gui frameworks, XMMS2 shouldn't tell you what to you use.
+
+* '''The freedom to run XMMS2 wherever your want'''
+XMMS2 should be portable enough to be able to run on all different types of applications and Operating Systems. Again, you are free to choose.
+
 === Version 2 - Based on the feedback ===
 
 * '''XMMS2 should be a kick-ass audio player and organizer'''
