--- a/0-/XMMS2 Vision.mediawiki
+++ b/0-/XMMS2 Vision.mediawiki
@@ -121,3 +121,7 @@ I'd really prefer if the document talked about XMMS2 being "free software" rathe
 I agree with tilman regarding free/open source. XMMS2 is free software, but "open source" does not necessarily mean free.
 
 [[User:AnthonyG|AnthonyG]] 21:20, 13 February 2009 (UTC)
+
+I love the four freedoms, but in it I think we lost two things: The first is the emphasis on audio-quality, and the second is the significance of open-source/free software as a mechanism for innovation.
+
+[[User:Alesbl|Alesbl]] 23:41, 15 February 2009 (UTC)
